[metadata]
name = skyfield_examples
version = 0.8.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Examples of using skyfield
url = https://github.com/scivision/skyfield-examples
keywords =
  ephemerides
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_requires =
  numpy

[options.extras_require]
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
